--- a/SecondIINoneMC.Web/Views/PhotoGallery/Index.cshtml
+++ b/SecondIINoneMC.Web/Views/PhotoGallery/Index.cshtml
@@ -14,12 +14,17 @@
                 {
                     if (rowCount < (Model.Count))
                     {
-              
-                        <div class="large-1 photoGalleryColumns">
+
+                        @*<div class="large-1 photoGalleryColumns">
                             <img alt="Profile Picture" src="https://graph.facebook.com/@Model[rowCount].FacebookId/picture?type=small" />
                         </div>
-                        <div class="large-3 photoGalleryColumns" style="border-right: 2px solid #D9D9D9;">
+                        <div class="large-4 photoGalleryColumns" style="border-right: 2px solid #D9D9D9;">
                             <a target="_blank" href="https://www.facebook.com/profile.php?id=@Model[rowCount].FacebookId&sk=photos">
+                                @Model[rowCount].Name
+                            </a>
+                        </div>*@
+                        <div class="large-4 photoGalleryColumns" style="border-right: 2px solid #D9D9D9;">
+                            <a target="_blank" href="https://www.facebook.com/search/top/?q=secondIInone @Model[rowCount].Name">
                                 @Model[rowCount].Name
                             </a>
                         </div>
